k8s/treehouse/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: treehouse-deployment
  namespace: gallifrey
  labels:
    app: treehouse
spec:
  replicas: 3
  selector:
    matchLabels:
      app: treehouse
  template:
    metadata:
      labels:
        app: treehouse
    spec:
      containers:
      - name: treehouse
        image: registry.gallifrey.local/treehouse:latest
        volumeMounts:
        - mountPath: /var/lib/treehouse
          name: treehouse-data
        ports:
        - port: 80
        - containerPort: 80
      volumes:
       - name: treehouse-data
         hostPath:
           path: /k8s/treehouse
           type: DirectoryOrCreate
